2012-11-19 13:29  edzer

	* DESCRIPTION, R/dotsinpolys.R: version bump, added URL
	  dotsinpolygons: renamed sample.Polygons to spsample, so we can
	  retire sample.Xxx in sp

2012-11-19 13:00  oscarperpi

	* NAMESPACE: new method "label" for line labels

2012-11-19 12:59  oscarperpi

	* man/lineLabel.Rd: new line labels examples added

2012-11-19 12:59  oscarperpi

	* R/lineLabel.R: line label algorithm improved

2012-11-12 09:25  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2012-11-12 09:24  rsbivand

	* ChangeLog, DESCRIPTION, R/CCmaps.R: fix bug in CCmaps

2012-11-06 07:17  rsbivand

	* DESCRIPTION, NAMESPACE, man/lineLabel.Rd,
	  man/pointLabelLattice.Rd: add drawDetails.labels to NAMESPACE

2012-11-05 08:11  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2012-11-05 08:11  rsbivand

	* DESCRIPTION, NAMESPACE, R/lineLabel.R, R/pointLabel.R,
	  R/pointLabelBase.R, R/pointLabelLattice.R, man/lineLabel.Rd,
	  man/pointLabel.Rd, man/pointLabelBase.Rd,
	  man/pointLabelLattice.Rd, man/sp2WB.Rd: to UTF-8; adding lattice
	  pointLabel

2012-11-04 16:04  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2012-10-29 14:39  rsbivand

	* DESCRIPTION, R/spatstat1.R: branching in owin2Polygons on
	  as.polygonal type

2012-08-22 12:35  rsbivand

	* man/SpatialLines2PolySet.Rd, man/map2SpatialPolygons.Rd,
	  man/pal2SpatialPolygons.Rd: make suggests if(require())

2012-08-09 12:58  rsbivand

	* DESCRIPTION, R/Rgshhs.R, man/Rgshhs.Rd: Rgshhs SpatialCollections
	  avoidance

2012-07-22 13:10  rsbivand

	* R/midpoint.R: correct midpoint data.frame

2012-06-29 08:45  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2012-06-08 20:10  rsbivand

	* ChangeLog, inst/ChangeLog: tidy

2012-06-08 20:08  rsbivand

	* DESCRIPTION, NAMESPACE, R/midpoint.R,
	  man/SpatialLinesMidPoints.Rd: add line midpoint

2012-05-09 08:12  rsbivand

	* R/getKMLcoordinates.R: blanks in KML input

2012-05-04 08:29  rsbivand

	* R/elide.R: copy comment in elide

2012-05-03 11:09  rsbivand
